# gaze

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Justfile  LICENSE  README.md  mise.toml  nfpm.yaml  package-lock.json  package.json  renovate.json  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: audit.yml  build.yml  cd.yml  ci.yml
config/: config.toml
docs/: index.md
docs/.vitepress/: config.mts  virtual.d.ts
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: InstallOneliner.vue  SecurityWarning.vue  VersionSwitcher.vue
docs/guide/: cli.md  configuration.md  contributing.md  development.md  getting-started.md  gnome.md  gui.md  how-it-works.md  hyprland.md  installation.md  pam.md  troubleshooting.md  uninstallation.md
docs/public/: install.sh
docs/src/: index.md
docs/src/guide/: cli.md  comparison.md  configuration.md  development.md  getting-started.md  gnome.md  gui.md  how-it-works.md  hyprland.md  installation.md  pam.md  troubleshooting.md  uninstallation.md
gaze/: Cargo.toml  build.rs
gaze-cli/: Cargo.toml
gaze-cli/src/: doctor.rs  main.rs  polkit.rs  tui.rs
gaze-cli/tests/: repository_regressions.rs
gaze-core/: Cargo.toml  build.rs
gaze-core/ir-profiles/: 04f2-b615.toml  04f2-b67c.toml  04f2-b6be.toml  04f2-b6cb.toml  04f2-b6d9.toml  0bda-5517.toml  0bda-5767.toml  0bda-58c2.toml  0c45-6739.toml  0c45-6a21.toml  13d3-56ba.toml  30c9-0057.toml  README.md
gaze-core/src/: camera.rs  capture.rs  capture_session.rs  config.rs  dbus.rs  detect.rs  face.rs  lib.rs
gaze-core/src/ir/: devices.rs  led.rs  mod.rs
gaze-gui/: Cargo.toml
gaze-gui/src/: camera_view.rs  capture_dialog.rs  main.rs  window.rs
gaze/src/: align.rs  crypto.rs  daemon.rs  liveness.rs  main.rs  models.rs  recognize.rs  tpm.rs  users.rs
gaze_common/: Cargo.toml
gaze_common/src/: camera.rs  capture.rs  centering.rs  config.rs  face.rs  lib.rs
gaze_core/: Cargo.toml
gaze_core/src/: camera.rs  capture.rs  capture_session.rs  centering.rs  config.rs  dbus.rs  detect.rs  face.rs  lib.rs  models.rs  users.rs
gaze_gui/: Cargo.toml
gaze_gui/src/: camera_view.rs  capture_dialog.rs  enroll_dialog.rs  main.rs  window.rs
gnome-shell-extension/: extension.js  metadata.json  prefs.js
gnome_shell_extension/: Cargo.toml  extension.js  metadata.json
gnome_shell_extension/src/: lib.rs
packaging/: nfpm-gnome-extension.yaml  nfpm-gui.yaml  nfpm-hyprlock.yaml  nfpm.yaml  nfpm_gnome_extension.yaml  nfpm_gui.yaml  postinst-arch.sh  postinst-deb.sh  postinst-gnome-extension.sh  postinst-hyprlock.sh  postinst_arch.sh  postinst_deb.sh  postinst_gnome_extension.sh  postinst_rpm.sh  postrm-gnome-extension.sh  postrm-hyprlock.sh  prerm_deb.sh
packaging/aur/: PKGBUILD.tpl
packaging/authselect/custom/gaze/: README  dconf-locks
packaging/config/: com.gundulabs.Gaze.conf  com.gundulabs.gaze.policy  config.toml  gazed.service  org.gaze.Auth.conf  org.gnome.login-screen.gaze.gschema.xml  org.gnome.shell.extensions.gaze.gschema.xml
packaging/docker/: Dockerfile.build  entrypoint.sh
packaging/flatpak/: com.gundulabs.Gaze.flatpakref  com.gundulabs.Gaze.flatpakrepo  com.gundulabs.Gaze.yml
packaging/gdm/: 00-gaze-defaults  99-gaze
packaging/gui/: com.gundulabs.Gaze.desktop  com.gundulabs.Gaze.metainfo.xml
packaging/pam/: gaze  gaze-simultaneous  gdm-face  gdm-face.arch  gdm-face.deb  hyprlock-gaze  hyprlock-gaze-simultaneous  hyprlock-gaze-simultaneous.deb  hyprlock-gaze.deb
pam-gaze/: Cargo.toml
pam-gaze-core/: Cargo.toml
pam-gaze-core/src/: lib.rs
pam-gaze-grosshack/: Cargo.toml
pam-gaze-grosshack/src/: lib.rs
pam-gaze/src/: lib.rs
pam_gaze/: Cargo.toml
pam_gaze/src/: lib.rs
pam_gaze_core/: Cargo.toml
pam_gaze_core/src/: lib.rs
pam_gaze_grosshack/: Cargo.toml
pam_gaze_grosshack/src/: lib.rs
scripts/: build-aur-packages.sh  build-flatpak.sh  build-repos.sh  check-liveness-preprocessing.py  dev-link-system.sh  pre-commit  prepare-docs.sh  push-aur-packages.sh  setup-hooks.sh
src/: align.rs  camera.rs  daemon.rs  detect.rs  main.rs  models.rs  recognize.rs  users.rs
src/daemon/: align.rs  users.rs
