[workspace]
members = [
    ".",
    "gaze_core",
    "pam_gaze_core",
    "pam_gaze",
    "pam_gaze_grosshack",
    "gaze_gui",
]
default-members = [".", "pam_gaze", "pam_gaze_grosshack", "gaze_gui"]
resolver = "3"

[package]
name = "gaze"
version = "0.1.0"
edition = "2024"
description = "Facial authentication for Linux"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
gaze_core = { path = "gaze_core" }
image = "0.25.9"
nalgebra = "0.34.1"
ndarray = "0.17.2"
opencv = "0.98.1"
ort = "2.0.0-rc.11"
rayon = "1.10"
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
ureq = "3.0"
uuid = { version = "1.10", features = ["v4"] }
zbus = "4.4.0"
zip = "2.4"
indicatif = "0.18.4"
console = "0.16.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[[bin]]
name = "gazed"
path = "src/main.rs"

[[bin]]
name = "gaze"
path = "src/bin/cli.rs"
