[workspace]
members = [
    ".",
    "gaze_core",
    "gnome_shell_extension",
    "pam_gaze_core",
    "pam_gaze",
    "pam_gaze_grosshack",
    "gaze_gui",
]
default-members = [".", "pam_gaze", "pam_gaze_grosshack", "gaze_gui"]
resolver = "3"

[package]
name = "gaze"
version = "0.1.0"
edition = "2024"
description = "Facial authentication for Linux"
license = "MIT"
homepage = "https://gaze.gundulabs.com"
repository = "https://github.com/Gundu-Labs/gaze"
authors = ["Gundu Labs <maintainers@gundulabs.com>"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
gaze_core = { path = "gaze_core" }
image = "0.25.9"
nalgebra = "0.34.1"
ndarray = "0.17.2"
opencv = "0.98.1"
ort = "2.0.0-rc.11"
rayon = "1.10"
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
ureq = "3.0"
uuid = { version = "1.10", features = ["v4"] }
zbus = "4.4.0"
zip = "2.4"
indicatif = "0.18.4"
console = "0.16.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[[bin]]
name = "gazed"
path = "src/main.rs"

[[bin]]
name = "gaze"
path = "src/bin/cli.rs"

[package.metadata.nfpm]
section = "admin"
priority = "optional"

[[package.metadata.nfpm.contents]]
src = "dist/config.toml"
dst = "/etc/gaze/config.toml"
type = "config"

[[package.metadata.nfpm.contents]]
src = "dist/org.gaze.Auth.conf"
dst = "/etc/dbus-1/system.d/org.gaze.Auth.conf"
type = "file"

[[package.metadata.nfpm.contents]]
src = "dist/gazed.service"
dst = "/usr/lib/systemd/system/gazed.service"
type = "file"

[[package.metadata.nfpm.contents]]
src = "dist/gdm-face"
dst = "/etc/pam.d/gdm-face"
type = "file"

[[package.metadata.nfpm.contents]]
src = "target/release/libpam_gaze.so"
dst = "/lib/x86_64-linux-gnu/security/pam_gaze.so"
packager = "deb"

[[package.metadata.nfpm.contents]]
src = "target/release/libpam_gaze_grosshack.so"
dst = "/lib/x86_64-linux-gnu/security/pam_gaze_grosshack.so"
packager = "deb"

[[package.metadata.nfpm.contents]]
src = "target/release/libpam_gaze.so"
dst = "/usr/lib64/security/pam_gaze.so"
packager = "rpm"

[[package.metadata.nfpm.contents]]
src = "target/release/libpam_gaze_grosshack.so"
dst = "/usr/lib64/security/pam_gaze_grosshack.so"
packager = "rpm"

[[package.metadata.nfpm.contents]]
src = "target/release/libpam_gaze.so"
dst = "/usr/lib/security/pam_gaze.so"
packager = "archlinux"

[[package.metadata.nfpm.contents]]
src = "target/release/libpam_gaze_grosshack.so"
dst = "/usr/lib/security/pam_gaze_grosshack.so"
packager = "archlinux"

[[package.metadata.nfpm.contents]]
src = "dist/pam-configs/gaze/"
dst = "/usr/share/pam-configs/"
packager = "deb"

[[package.metadata.nfpm.contents]]
src = "dist/authselect/custom/gaze/"
dst = "/usr/share/authselect/vendor/gaze/"
packager = "rpm"

[package.metadata.nfpm.deb]
arch = "amd64"
depends = ["libopencv-dev", "libpam0g"]

[package.metadata.nfpm.deb.scripts]
postinstall = "packaging/postinst_deb.sh"
preremove = "packaging/prerm_deb.sh"

[package.metadata.nfpm.rpm]
arch = "x86_64"
depends = ["opencv", "pam"]

[package.metadata.nfpm.rpm.scripts]
postinstall = "packaging/postinst_rpm.sh"

[package.metadata.nfpm.archlinux]
arch = "x86_64"
depends = ["opencv", "pam"]

[package.metadata.nfpm.archlinux.scripts]
postinstall = "packaging/postinst_arch.sh"
