[package]
name = "gaze-cli"
version = "0.2.0"
edition = "2024"
description = "Command-line facial authentication client for Gaze"
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "gaze"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.4"
crossterm = "0.29"
dialoguer = "0.12"
futures = "0.3.32"
gaze-core = { path = "../gaze-core", default-features = false }
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
zbus = "5.16.0"
