[package]
name = "gaze-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
image = "0.25.9"
libc = "0.2"
nalgebra = "0.34.1"
ndarray = "0.17.2"
opencv = { version = "0.98.1", default-features = false, features = ["imgproc", "videoio"] }
ort = "2.0.0-rc.11"
rusty_scrfd = "1.3.1"
zbus = "5.14"
zvariant = "5.10"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
tracing = "0.1"
toml = "0.8"
ureq = "3.0"
uuid = { version = "1.10", features = ["v4"] }
zip = "2.4"
gstreamer = "0.25.1"
gstreamer-app = "0.25.0"
gstreamer-video = "0.25.0"
strum = "0.26"
strum_macros = "0.26"
