[package]
name = "gaze-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["detection"]
detection = ["dep:ort", "dep:rusty_scrfd"]

[dependencies]
anyhow = "1.0.102"
image = "0.25.10"
libc = "0.2.186"
nalgebra = "0.35.0"
ndarray = "0.17.2"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "videoio"] }
ort = { version = "2.0.0-rc.12", optional = true }
rusty_scrfd = { version = "1.3.1", optional = true }
zbus = "5.16.0"
zvariant = "5.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_plain = "1.0.2"
tracing = "0.1.44"
toml = "1.1.2"
ureq = "3.3"
uuid = { version = "1.23.3", features = ["v4"] }
zip = "8.6"
gstreamer = "0.25.2"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.2"
strum = "0.28"
strum_macros = "0.28"

[build-dependencies]
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
