[package]
name = "gaze-core"
version = "0.2.3"
edition = "2024"
description = "Shared camera, configuration, D-Bus, and face detection library for Gaze"
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["detection"]
detection = ["dep:ort"]

[dependencies]
anyhow = "1.0.103"
image = { version = "0.25.10", default-features = false }
libc = "0.2.186"
nalgebra = "0.35.0"
ndarray = "0.17.2"
opencv = { version = "0.99.0", default-features = false, features = ["imgproc", "videoio"] }
ort = { version = "2.0.0-rc.12", optional = true }
zbus = "5.17.0"
zvariant = "5.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_plain = "1.0.2"
tracing = "0.1.44"
toml = "1.1.3"
ureq = "3.3"
uuid = { version = "1.23.5", features = ["v4"] }
zip = "8.6"
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.3"
strum = "0.28"
strum_macros = "0.28"

[build-dependencies]
toml = "1.1.3"
serde = { version = "1.0.228", features = ["derive"] }
