[package]
name = "gaze-gui"
version = "0.2.2"
edition = "2024"
description = "GTK application for configuring and enrolling users with Gaze"
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "gaze-gui"
path = "src/main.rs"

[dependencies]
gaze-core = { path = "../gaze-core", default-features = false }
gtk4 = { version = "0.11.4", features = ["gnome_46"] }
libadwaita = { version = "0.9.2", features = ["v1_4"] }
zbus = "5.17.0"
zbus_polkit = "5.0.0"
enumflags2 = "0.7.12"
anyhow = "1.0.103"
opencv = { version = "0.99.0", default-features = false, features = ["imgproc", "videoio"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.2"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync"] }
gio = { version = "0.22.8", features = ["v2_66"] }
glib = { version = "0.22.8", features = ["v2_66"] }
