[package]
name = "gaze"
version = "0.1.0"
edition = "2024"
description = "Daemon for Gaze"
license = "MIT"
homepage = "https://gaze.gundulabs.com"
repository = "https://github.com/Gundu-Labs/gaze"
authors = ["Gundu Labs <maintainers@gundulabs.com>"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
gaze-core = { path = "../gaze-core" }
getrandom = "0.4.3"
image = "0.25.10"
libc = "0.2.186"
nalgebra = "0.35.0"
ndarray = "0.17.2"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "videoio"] }
ort = "2.0.0-rc.12"
rayon = "1.12"
sha2 = "0.11"
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
ureq = "3.3"
uuid = { version = "1.23.4", features = ["v4"] }
zbus = "5.16.0"
zip = "8.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures = "0.3.32"
zbus_polkit = "5.0.0"
# Seals the face-template encryption key to the TPM. Only `gazed` links this;
# the CLI/GUI/PAM clients must not (mirrors the `ort` isolation in AGENTS.md).
tss-esapi = "7.7.0"

[[bin]]
name = "gazed"
path = "src/main.rs"
