[package]
name = "gaze_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
image = "0.25.9"
libc = "0.2"
nalgebra = "0.34.1"
ndarray = "0.17.2"
opencv = "0.98.1"
ort = "2.0.0-rc.11"
rusty_scrfd = "1.3.1"
zbus = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ureq = "3.0"
uuid = { version = "1.10", features = ["v4"] }
zip = "2.4"
