[package]
name = "gaze_gui"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://gaze.gundulabs.com"
repository = "https://github.com/Gundu-Labs/gaze"
authors = ["Gundu Labs <maintainers@gundulabs.com>"]

[[bin]]
name = "gaze-gui"
path = "src/main.rs"

[dependencies]
gaze_core = { path = "../gaze_core" }
gtk4 = { version = "0.9.7", features = ["gnome_46"] }
libadwaita = { version = "0.7.2", features = ["v1_4"] }
zbus = "4.4.0"
anyhow = "1.0.102"
opencv = "0.98.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.nfpm]
name = "gaze-gui"
section = "admin"
priority = "optional"

[[package.metadata.nfpm.contents]]
src = "dist/com.gundulabs.Gaze.desktop"
dst = "/usr/share/applications/com.gundulabs.Gaze.desktop"
type = "file"

[[package.metadata.nfpm.contents]]
src = "dist/com.gundulabs.Gaze.svg"
dst = "/usr/share/icons/hicolor/scalable/apps/com.gundulabs.Gaze.svg"
type = "file"

[package.metadata.nfpm.deb]
arch = "amd64"
depends = ["gaze", "libgtk-4-1", "libadwaita-1-0"]

[package.metadata.nfpm.rpm]
arch = "x86_64"
depends = ["gaze", "gtk4", "libadwaita"]

[package.metadata.nfpm.archlinux]
arch = "x86_64"
depends = ["gaze", "gtk4", "libadwaita"]
