[package]
name = "gaze-gnome-extension"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GNOME Shell extension for Gaze on login and lock screen"
homepage = "https://gaze.gundulabs.com"
repository = "https://github.com/Gundu-Labs/gaze"
authors = ["Gundu Labs <maintainers@gundulabs.com>"]

[lib]
path = "src/lib.rs"

[package.metadata.nfpm]
section = "admin"
priority = "optional"
depends = ["gaze", "gnome-shell"]

[[package.metadata.nfpm.contents]]
src = "gnome_shell_extension/metadata.json"
dst = "/usr/share/gnome-shell/extensions/gaze@gundulabs.com/metadata.json"
type = "file"

[[package.metadata.nfpm.contents]]
src = "gnome_shell_extension/extension.js"
dst = "/usr/share/gnome-shell/extensions/gaze@gundulabs.com/extension.js"
type = "file"

[[package.metadata.nfpm.contents]]
src = "dist/org.gnome.login-screen.gaze.gschema.xml"
dst = "/usr/share/glib-2.0/schemas/org.gnome.login-screen.gaze.gschema.xml"
type = "file"

[[package.metadata.nfpm.contents]]
src = "dist/gdm-face"
dst = "/etc/pam.d/gdm-face"
type = "config"

[[package.metadata.nfpm.contents]]
src = "dist/gaze-gdm-camera.te"
dst = "/usr/share/gaze/gaze-gdm-camera.te"
type = "file"

[package.metadata.nfpm.scripts]
postinstall = "packaging/postinst_gnome_extension.sh"

[package.metadata.nfpm.rpm]
arch = "x86_64"
recommends = ["checkpolicy", "policycoreutils"]

[package.metadata.nfpm.deb]
arch = "amd64"

[package.metadata.nfpm.archlinux]
arch = "x86_64"
