[package]
name = "pam-gaze-core"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
gaze-core = { path = "../gaze-core" }
libc = "0.2"
opencv = { version = "0.98.1", default-features = false, features = ["imgproc", "videoio"] }
zbus = "4.4.0"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
parking_lot = "0.12"
anyhow = "1.0"
futures = "0.3"
