[package]
name = "pam-gaze-core"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
gaze-core = { path = "../gaze-core", default-features = false }
libc = "0.2.186"
zbus = "5.16.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
parking_lot = "0.12.5"
anyhow = "1.0.103"
futures = "0.3.32"
