[package]
name = "pam-gaze-core"
version = "0.2.2"
edition = "2024"
description = "Shared PAM authentication and FFI implementation for Gaze"
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[lib]

[dependencies]
gaze-core = { path = "../gaze-core", default-features = false }
libc = "0.2.186"
zbus = "5.17.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
parking_lot = "0.12.5"
anyhow = "1.0.103"
futures = "0.3.32"
