[package]
name = "pam-gaze-grosshack"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pam-gaze-core = { path = "../pam-gaze-core" }
gaze-core = { path = "../gaze-core" }
libc = "0.2"
zbus = "4.4.0"
parking_lot = "0.12"
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
