[package]
name = "pam-gaze"
version = "0.2.0"
edition = "2024"
description = "Sequential facial authentication PAM module for Gaze"
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pam-gaze-core = { path = "../pam-gaze-core" }
gaze-core = { path = "../gaze-core", default-features = false }
libc = "0.2.186"
zbus = "5.16.0"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
